2008-04-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* ConnectionManager.cs: Hack-fix: In some cases it can take up to 190
	  seconds for a pending connection request to time out. Force the
	  connection attempt to abort after 10 seconds if it is not
	  successful.

2008-03-31  Alan McGovern <alan.mcgovern@gmail.com> 

	

2008-03-31  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs: Fixes #375377 - FastResume data correctly reloaded from
	  disk

2008-03-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* PieceManager.cs: This wasn't supposed to hit svn...

2008-03-30  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs: Bugfix: When loading fast resume, trigger the
	  PieceHashed event to update per-file progress.

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* ConnectionManager.cs: Never try to download more data than we are
	  expecting - slight performance hit, but fixes issue when integrating
	  with other programs which expect to be able to receive *exactly* the
	  data i request.

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	* TorrentManager.cs: Cleaned up some of my method firing goodness

2008-02-02  Alan McGovern <alan.mcgovern@gmail.com> 

	

2008-01-12  Alan McGovern <alan.mcgovern@gmail.com> 

	* TrackerManager.cs: Added fix for meshwork

2007-12-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* ConnectionManager.cs: Now using the 'out ErrorCode' overloads for the
	  sockets.
